<resources
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="actionbar_title_event_repeat_setting">일정 반복설정</string>
    <string name="facebook_app_id">928166907219380</string>
    <string name="naver_client_id">hHKwWsckNyospH5StqVX</string>
    <string name="naver_client_secret">e_MTKsbLaq</string>
    <string name="naver_client_name">TutorsDiary</string>
    <string name="app_name">TUDA</string>
    <string name="app_name_full">TutorsDiary</string>
    <string name="app_name_kor">튜다</string>
    <string name="btn_app_update">업데이트</string>
    <string name="btn_app_exit">종료하기</string>
    <string name="btn_app_later">나중에 하기</string>
    <string name="app_close">앱을 종료합니다.</string>
    <string name="btn_ongoing">계속 진행하기</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_yes">예</string>
    <string name="btn_no">아니오</string>
    <string name="btn_modify">수정하기</string>
    <string name="msg_thankyou">선생님이 되면 다시 찾아주세요^^</string>
    <string name="nickname_admin">튜다관리자</string>
    <string name="talk_notice">공지</string>
    <string name="copy_string">복사</string>
    <string name="note_send">쪽지 발송</string>
    <string name="bad_report">신고하기</string>
    <string name="talk_secret">1:1톡 요청</string>
    <string name="talk_room_exit">나가기</string>
    <string name="talk_room_exit_1">질문 그만보기</string>
    <string name="not_network">네트워크가 꺼져 있습니다.\n네트워크 설정후 다시 실행해주세요.</string>
    <string name="action_message">메세지</string>
    <string name="action_settings">설정</string>
    <string name="action_close">닫기</string>
    <string name="network_error">네트워크 오류</string>
    <string name="action_mypage">내 정보 수정</string>
    <string name="app_update">앱의 새버전이 출시됐습니다.\n업데이트 하시겠습니까?</string>
    <string name="google_update">원활한 앱 사용을 위해 구글마켓을 최신버전으로 업데이트 해주세요.</string>
    <string name="mail_client_choose">메일을 보낼 앱을 선택하세요.</string>
    <string name="default_error">일시적인 오류입니다.\n잠시 후에 다시 시도해 주세요.</string>
    <string name="google_play_error">튜다톡을 정상적으로 사용하기 위해, 구글마켓을 최신버전으로 업데이트 해주세요.</string>
    <string name="pushkey_error">디바이스를 등록중에 있습니다.\n앱을 종료 후 다시 실행해주세요.</string>
    <string name="request_sending">기능 요청중 입니다...</string>
    <string name="find_password_start">비밀번호찾기를 시작합니다.</string>
    <string name="mail_success1">입력한 주소로 메일이 발송됐습니다.\n메일을 통해 임시발급된 비밀번호를 확인해 주세요.</string>
    <string name="mail_success2">입력한 휴대폰번호로 SMS가 발송됐습니다.\nSMS를 통해 임시발급된 비밀번호를 확인해 주세요.</string>
    <string name="mail_error1">메일 발송 오류입니다.\n잠시 후에 다시 시도해 주세요.</string>
    <string name="mail_error2">SMS 발송 오류입니다.\n잠시 후에 다시 시도해 주세요.</string>
    <string name="password_update_fail">비밀번호 변경에 실패했습니다.\n잠시 후에 다시 시도해 주세요.</string>
    <string name="data_incorrect">입력한 정보가 일치하지 않습니다.\n다시 입력해 주세요.</string>
    <string name="data_fail">일시적인 오류입니다.\n잠시 후에 다시 시도해 주세요.</string>
    <string name="signup_fail">회원가입에 오류가 발생했습니다.\n잠시 후에 다시 시도해 주세요.</string>
    <string name="network_fail_msg1">어머나! 죄송합니다 ㅠ.ㅠ</string>
    <string name="network_fail_msg2">네트워크 오류가 발생했습니다.\n다시 한번 시도해 보시겠어요?</string>
    <string name="network_fail_btn1">네.</string>
    <string name="network_fail_btn2">종료할께요.</string>
    <string name="network_fail">네트워크 오류입니다.\n잠시 후에 다시 시도해 주세요.</string>
    <string name="notice_fail">종료된 공지입니다.</string>
    <string name="token_fail">로그인에 실패했습니다.\n다시 시도해 주세요.</string>
    <string name="nomember_fail">가입정보가 없습니다.\n이메일 정보를 다시한번 확인해주세요.</string>
    <string name="duplicatemember_fail">가입되어 있는 계정입니다.\n로그인 합니다.</string>
    <string name="ban_words_fail">사용할 수 없는 단어가 포함되어 있습니다.</string>
    <string name="request_finish">요청이 완료 됐습니다.</string>
    <string name="request_form_input">내용을 입력해 주세요.</string>
    <string name="login_fail_sns">로그인을 할 수 없습니다.이메일로 로그인후 환경설정-SNS 로그인연동을 해주세요.</string>
    <string name="duplicatemember_sns">로그인을 진행합니다.</string>
    <string name="config_sns_login">%1$s(으)로 로그인을 할 수 있습니다.</string>
    <string name="config_sns_logout">연동이 해제되었습니다.\n이제는 %1$s(으)로 로그인을 할 수 없습니다.</string>
    <string name="config_sns_duplicate">SNS연동은 중복해서 사용할 수 없습니다.</string>
    <string name="config_sns_connect_fail">연동할 수 없습니다.</string>
    <string name="noti_app_exit">종료하려면 \'종료하기\' 버튼을 눌러주세요.</string>
    <string name="pds_moveToMy">마이자료실에 즐겨찾기 되었습니다.</string>
    <string name="pds_moveToShare">공유자료실에 등록 되었습니다.</string>
    <string name="pds_duplicate_my">마이자료실에 동일한 자료가 즐겨찾기되어 있습니다.</string>
    <string name="pds_duplicate_share">공유자료실에 동일한 자료가 등록되어 있습니다.</string>
    <string name="withdraw_msg1">정말 탈퇴하실 건가요?</string>
    <string name="withdraw_msg2">아래 튜다 탈퇴 절차를 작성해주시면 &lt;font color=\'#f64747\'&gt;학생정보, 수업평가/수업료/상담내역/메모 등 서비스 이용 중 입력한 각종 정보도 모두 삭제&lt;/font&gt;됩니다.</string>
    <string name="withdraw_msg2_partner">아래 튜다 탈퇴 절차를 작성해주시면 &lt;font color=\'#f64747\'&gt;서비스 내 각종 활동내역, 등의 정보도 모두 삭제&lt;/font&gt;됩니다.</string>
    <string name="withdraw_msg3">30일내 재가입은 하실 수 없습니다.\n개인정보보호를 위해 탈퇴후 삭제된 데이터는 기존 데이터로 복구할 수 없습니다.\n타인과 공유된 데이터(예:튜다톡, 잡마켓, 등)의 경우는 보존될 수 있습니다. 보존을 원치 않을경우 직접 삭제해 주시기 바랍니다.\n안내에 대한 동의절차는 탈퇴버튼을 누르는 것으로 갈음합니다.</string>
    <string name="withdraw_msg7">정말 탈퇴하실 건가요?</string>
    <string name="withdraw_msg8">로그인 비밀번호를 입력해주세요.</string>
    <string name="withdraw_fail">탈퇴 처리가 되지 않았습니다.\n비밀번호를 확인해 주세요.</string>
    <string name="withdraw_success">탈퇴 됐습니다.\n그동안 이용해주셔서 감사합니다.</string>
    <string name="too_much_address_search_result">검색결과가 너무 많습니다.\n검색 종류와 검색어를 조합해서 정확도를 올려주시기 바랍니다.\n(예:영동대로 513, 삼성동 159, 산본천로 119-9)</string>
    <string name="funcrequest_no_answer">답변을 기다리는중 입니다.</string>
    <string name="talk_lastread">여기까지 읽었습니다.</string>
    <string name="image_upload_fail">이미지 업로드에 실패했습니다.\n잠시 후에 다시 시도해 주세요.</string>
    <string name="image_upload_noAvail">본 기기는 이미지 업로드 기능을 지원하지 않습니다.</string>
    <string name="web_loading_fail">해당 웹페이지는 더이상 유효하지 않습니다.</string>
    <string name="member_info_fail">일치하는 회원 정보가 없습니다.\n정확히 입력 후 다시 시도해 주세요.</string>
    <string name="app_close_message">뒤로가기를 두번 누르면 앱이 종료됩니다.</string>
    <string name="mypage_info_change">내 정보를 변경할까요?</string>
    <string name="mypage_passwd_change">비밀번호를 변경할까요?</string>
    <string name="mypage_auto_login">자동로그인 할까요?</string>
    <string name="birthday_message">생년월일은 언제인가요?</string>
    <string name="repeat_day_interval_txt">일마다 반복</string>
    <string name="repeat_week_interval_txt">주마다 반복</string>
    <string name="repeat_month_interval_txt">개월마다 반복</string>
    <string name="repeat_year_interval_txt">년마다 반복 (M월 d일)</string>
    <string name="cs_notice_contents1">안녕하세요. 튜다 고객센터입니다.\n기능개선/버그신고 등 불편한 사항을 기재해 주시면 최대한 빠른 시간 내로 답변 드릴 수 있도록 노력하겠습니다.</string>
    <string name="cs_notice_contents2">고객센터 운영 시간 : 오전 10시 ~ 오후 7시까지</string>
    <string name="student_lesson_open">과외를 하고 있습니다.</string>
    <string name="student_lesson_close">더 이상 과외를 하지 않습니다.</string>
    <string name="charge_chargeday">수업료 납부일을 입력하세요.</string>
    <string name="talk_helptag">#헬프</string>
    <string name="talk_helptag_toast">튜다 관리자에게 내용을 전달하였습니다.</string>
    <string name="mobile_input_message">만약 학생 휴대폰번호가 없다면 부모님 휴대폰번호를 입력해주세요.</string>
    <string name="talk_input_message">메세지를 입력해주세요.</string>
    <string name="talkroom_exit_message">톡에서 나가시겠습니까?\n\n톡에서 나가면 알림이 오지 않습니다.</string>
    <string name="talkroom_exit_message_1">질문을 그만 보시겠습니까?\n\n알림이 오지 않게됩니다.</string>
    <string name="talkroom_delete_msg_byOwner">개설자에 의해 삭제된 방입니다.</string>
    <string name="talkroom_delete_msg_byAdmin">운영자에 의해 삭제된 방입니다.</string>
    <string name="webview_ssl_error1">이 사이트의 보안 인증서는 신뢰할 수 없습니다.\n\n계속 진행하시겠습니까?</string>
    <string name="webview_ssl_error2">보안 인증서에 오류가 있습니다.\n\n계속 진행하시겠습니까?</string>
    <string name="regist_warning1">튜다는 선생님들을 위한 공간입니다.\n\n선생님이 아닐 경우 이용에 제한이 있을 수 있습니다.</string>
    <string name="regist_warning1_company">안녕하세요. 튜터스다이어리입니다.\n\n기업회원의 경우 정확한 업체정보(사업자명/회사번호/본인이름/전화번호/사업자등록번호/사업소개 등)를 입력하셔야 정상적인 서비스이용이 가능하며, \n부정확한 정보를 입력할 경우 사전예고 없이 서비스이용을 제한 할 수 있습니다.</string>
    <string name="regist_warning2">입력하신 정보는 추후 서비스 사용을 위한 이메일 인증 및 비밀번호 찾기 시 사용되오니 정확한 정보를 입력해 주셔야 합니다.\n\n가입하시겠습니까?</string>
    <string name="email_modify_warning">아이디를 변경할 경우 입력한 이메일 주소로 아이디가 변경저장되며, 해당 이메일로 인증을 다시 받아야 합니다.\n\n변경하시겠습니까?</string>
    <string name="email_auth_warning">인증요청시 입력한 이메일로 인증메일이 발송되며, 해당 이메일 주소로 아이디가 변경됩니다.\n\n인증요청을 하시겠습니까?</string>
    <string name="main_notice_title">앱 리뷰를 남겨주세요</string>
    <string name="main_notice_contents1">리뷰에 목마른 튜다입니다. :)\n구글플레이에 리뷰를 남겨주시면 과외선생님들을 위한 앱 기능 개선에 더욱 도움이 된답니다.♡</string>
    <string name="main_notice_btn_ok">GooglePlay 리뷰 쓰기</string>
    <string name="talk_nickgender_notice">닉네임과 성별, 지역 수정은 \'마이페이지-내정보변경\'에서 할 수 있습니다.</string>
    <string name="talk_nickgender_alert">튜다톡을 이용하려면 닉네임과 성별, 지역(선택)을 입력해야 합니다.\n\n닉네임과 성별, 지역(선택)을 입력하시겠습니까?</string>
    <string name="gossip_add">글이 등록됐습니다.</string>
    <string name="talk_notice_msg1">1. 음담패설, 욕설 등 상대방이 불쾌할 수 있는 단어는 삼가해 주세요.&lt;br&gt;2. 광고성이 짙은 톡은 사전 통보없이 삭제될 수 있습니다.&lt;br&gt;3. \'&lt;font color=\'#f64747\'&gt;&lt;b&gt;#헬프&lt;/b&gt;&lt;/font&gt; 궁금한 내용\'를 남겨주시면 위 내용에 대한 신고가 접수됩니다.&lt;br&gt;※ 이용 문의 사항은 헬프데스크 톡을 이용해 주세요!&lt;br&gt;(문의 가능 시간: 오전 10시 ~ 오후 7시)</string>
    <string name="talk_notice_msg2">평일기준 오전 10시~오후 7시까지만 어플 기능 및 사용에 대해서 답변할 수 있으니 양해 바랍니다.</string>
    <string name="talk_alert_msg1">메시지는 10,000자 이내로 입력해주세요.</string>
    <string name="phoneNumber_notice_title">휴대폰 번호를 입력해주세요</string>
    <string name="phoneNumber_notice_contents1">비밀번호찾기시 본인인증을 위해 휴대폰번호가 필요합니다.\n\n마이페이지-내정보변경에서 휴대폰번호를 입력해주세요.</string>
    <string name="identification_notice_contents1">본 서비스는 선생님들만 이용할 수 있으며, 선생님임을 인증하기 위해 본인확인을 해야 합니다.</string>
    <string name="identification_notice_contents2">본 서비스는 선생님들만 이용할 수 있으며, 내 정보의 업데이트가 필요합니다. 또한 선생님임을 인증하기 위해 본인확인을 해야 합니다.</string>
    <string name="identification_notice_contents3">TUDA의 운영 정책 변경에 따라  튜다톡을 사용하기 위해서 반드시 아래와 같이 본인의 정보를 변경해 주세요.&lt;br&gt;&lt;br&gt;&lt;font color=\'#f64747\'&gt;1. 입력 및 수정 방법&lt;br&gt;화면 왼쪽 상단의 삼선메뉴 - 상단 프로필이미지 클릭 - 하단 프로필수정 클릭 - 프로필 관리&lt;br&gt;&lt;br&gt;2. 필수 입력 정보&lt;br&gt;아이디, 기본정보, 연락처, 수업정보&lt;/font&gt;</string>
    <string name="identification_notice_contents4">TUDA의 운영 정책에 따라 잡마켓을 사용하기 위해서 반드시 아래와 같이 본인의 정보를 변경해 주세요.&lt;br&gt;&lt;br&gt;&lt;font color=\'#f64747\'&gt;1. 입력 및 수정 방법&lt;br&gt;화면 왼쪽 상단의 삼선메뉴 - 상단 프로필이미지 클릭 - 하단 프로필수정 클릭 - 프로필 관리&lt;br&gt;&lt;br&gt;2. 필수 입력 정보&lt;br&gt;아이디, 기본정보, 연락처, 수업정보&lt;/font&gt;</string>
    <string name="jobmarket_add_contents1">구인 / 구직을 선택하세요.</string>
    <string name="note_msg1">쪽지의 유효기간은 30일 입니다.\n수신자가 쪽지를 수신할 수 없는 버전의 튜다앱을 사용할 경우\n쪽지 발송이 되지 않습니다.</string>
    <string name="note_receiver_error">자신에게 쪽지를 발송할수는 없습니다.</string>
    <string name="talk_list_notice">글 작성시 음담패설, 욕설 등 상대방이 불쾌할 수 있는 단어는 삼가해 주세요.</string>
    <string name="study_room_notice">쌤풀은 쌤들끼리 서로 질문하고 풀어보며 문제에 대해 이야기하는 공간입니다.\n\n부담없이 이야기해 보아요.\n쌤들간의 에티켓은 필수~★</string>
    <string name="no_tel">등록된 연락처가 없습니다.</string>
    <string name="calendar_notice_contents1">수업일정 또는 일반일정을 등록해보세요!</string>
    <string name="event_list_add_event_msg"><u>일정을 등록해주세요!</u></string>
    <string name="findpasswd_msg1">1. 튜다앱 이용시\n비밀번호찾기 신청 > 입력한 이메일(또는 휴대폰번호)로 초기화 된 비밀번호 발송 (이메일의 경우 이메일 미 도착시 스팸함 확인)</string>
    <string name="findpasswd_msg1_1">1. 튜다앱 이용시\n비밀번호찾기 신청 > 입력한 이메일로 초기화 된 비밀번호 발송 (이메일 미 도착시 스팸함 확인)</string>
    <string name="findpasswd_msg2">2. 튜다 고객센터 이용시\n1번 방법으로 해결되지 않을 경우 아래 정보 기재후 튜다 고객센터로 신청\n기재내용 : 가입시 입력한 이메일(또는 휴대폰번호, 이후 연락처), 닉네임, 생일\n(가입시 입력한 연락처와 다른 연락처로 초기화 된 비밀번호를 받고자 할 경우, 별도 연락처 기재)</string>
    <string name="findpasswd_msg2_1">2. 튜다 고객센터 이용시\n1번 방법으로 해결되지 않을 경우 아래 정보 기재후 튜다 고객센터로 신청\n기재내용 : 가입시 입력한 이메일, 닉네임, 생일\n(가입시 입력한 이메일과 다른 이메일로 초기화 된 비밀번호를 받고자 할 경우, 별도 이메일 기재)</string>
    <string name="findpasswd_msg3">고객센터 : tutorsdiary@gmail.com</string>
    <string name="findpasswd_hint1">가입시 입력했던 이메일을 입력해주세요! :)</string>
    <string name="findpasswd_hint2">가입시 입력했던 휴대폰번호를 입력해주세요! :)</string>
    <string name="findpasswd_hint3">가입시 입력했던 닉네임을 입력해주세요! :)</string>
    <string name="mail_auth_indicator"><u>인증필요</u></string>
</resources>