<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.tuda.teacher.ui.view.TudaToolBar
            android:id="@+id/tuda_toolbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/actionbar_height"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/tuda_toolbar"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:visibility="gone">

                        <RadioGroup
                            android:id="@+id/contact_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:layout_centerVertical="true"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/contact_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="이메일로 찾기"
                                android:checked="true"
                                android:textColor="#757575"/>

                            <RadioButton
                                android:id="@+id/contact_mobile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="휴대폰번호로 찾기"
                                android:textColor="#757575"/>

                        </RadioGroup>
                    </RelativeLayout>

                    <!--include layout="@layout/divider_full"/-->

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:paddingLeft="12.5dp"
                        android:paddingRight="12.5dp"
                        android:background="@null"
                        android:hint="@string/findpasswd_hint1"
                        style="@style/T3"/>

                    <include layout="@layout/divider_full"/>

                    <LinearLayout
                        android:id="@+id/layout_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/edit_nickname"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:paddingLeft="12.5dp"
                            android:paddingRight="12.5dp"
                            android:background="@null"
                            android:hint="@string/findpasswd_hint3"
                            style="@style/T3"/>

                        <include layout="@layout/divider_full"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:paddingLeft="12.5dp"
                        android:paddingRight="12.5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="생일을 입력해주세요."
                        style="@style/T4"/>
                </LinearLayout>

                <include layout="@layout/divider_full"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12.5dp"
                    android:paddingRight="12.5dp"
                    android:paddingBottom="70dp"
                    android:layout_above="@+id/btn_withdraw"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:gravity="center_vertical"
                        android:drawableLeft="@drawable/common_warning"
                        android:drawablePadding="6dp"
                        android:text="비밀번호찾기 주의사항 안내"
                        style="@style/T6"
                        android:textColor="@color/point_color_1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/findpasswd_msg1_1"
                        style="@style/T7"
                        android:textColor="@color/point_color_2"
                        android:lineSpacingExtra="3dp"
                        android:id="@+id/textView3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/findpasswd_msg2_1"
                        style="@style/T7"
                        android:textColor="@color/point_color_2"
                        android:lineSpacingExtra="3dp"
                        android:id="@+id/textView4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:autoLink="email"
                        android:text="@string/findpasswd_msg3"
                        style="@style/T7"
                        android:textColor="@color/point_color_1"
                        android:lineSpacingExtra="3dp"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_find"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:text="찾기"
            style="@style/T1"
            android:textColor="@color/white"
            android:background="@color/point_color_2"/>
    </RelativeLayout>
</FrameLayout>
